# serializer version: 1
# name: test_cte_ok[cte_multi]
  '''
  cte
    cte_item_list
      cte_item
        ident	table1
        subquery
          select
            select_list
              select_expr
                integer_literal	1
                as_alias
                  ident	col1
      cte_item
        ident	table2
        subquery
          select
            select_list
              select_expr
                integer_literal	2
                as_alias
                  ident	col2
    select
      select_list
        select_expr
          ident	col1
        select_expr
          ident	col2
      from_clause
        from_item_table
          ident	table1
        from_item_table
          ident	table2
  
  '''
# ---
# name: test_cte_ok[cte_single]
  '''
  cte
    cte_item_list
      cte_item
        ident	table1
        subquery
          select
            select_list
              select_expr
                integer_literal	1
                as_alias
                  ident	col1
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_struct]
  '''
  select
    select_shape	STRUCT
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  select
    select_shape	VALUE
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
        as_alias
          ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
        as_alias
          ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_multi]
  '''
  select
    select_list
      select_expr
        ident	column1
      select_expr
        ident	column2
    from_clause
      from_item_table
        ident	table1
      from_item_table
        ident	table2
  
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
        time_travel
          string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_kitchen_sink]
  '''
  select
    select_list
      select_star
      select_expr
        ident	column1
      select_expr
        subquery
          select
            select_list
              select_expr
                integer_literal	1
        as_alias
          ident	column2
    from_clause
      from_item_table
        ident	table1
        as_alias
          ident	alias1
      from_item_subquery
        subquery
          select
            select_list
              select_expr
                ident	column7
            from_clause
              from_item_table
                ident	table2
        as_alias
          ident	alias2
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  select
    select_list
      select_expr
        ident	column1
        as_alias
          ident	alias1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  select
    select_list
      select_expr
        ident	column1
        as_alias
          ident	alias1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  select
    select_list
      select_expr
        ident	column1
      select_expr
        ident	column2
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  select
    select_list
      select_expr
        integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  select
    select_list
      select_star
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  select
    select_list
      select_dot_star
        ident	column1
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  select
    select_list
      select_dot_star
        ident
          column1
          column2
    from_clause
      from_item_table
        ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_subquery
        subquery
          select
            select_list
              select_expr
                ident	column1
            from_clause
              from_item_table
                ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_subquery
        subquery
          select
            select_list
              select_expr
                ident	column1
            from_clause
              from_item_table
                ident	table1
        as_alias
          ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  subquery
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  subquery
    select
      select_list
        select_expr
          subquery
            select
              select_list
                select_expr
                  subquery
                    select
                      select_list
                        select_expr
                          integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest_single]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_unnest
        unnest_expr
          ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_single_alias]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_unnest
        unnest_expr
          ident	array1
        as_alias
          ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
      from_item_unnest
        unnest_expr
          ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_alias_with_offset_alias]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
      from_item_unnest
        unnest_expr
          ident	array1
        as_alias
          ident	alias1
        from_unnest_offset_expr
          as_alias
            ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
      from_item_unnest
        unnest_expr
          ident	array1
        from_unnest_offset_expr
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset_alias]
  '''
  select
    select_list
      select_expr
        ident	column1
    from_clause
      from_item_table
        ident	table1
      from_item_unnest
        unnest_expr
          ident	array1
        from_unnest_offset_expr
          as_alias
            ident	alias1
  
  '''
# ---
